--- a/overlay/frameworks/base/core/res/res/values/strings.xml
+++ b/overlay/frameworks/base/core/res/res/values/strings.xml
@@ -10,10 +10,10 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds.  Do not translate. -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+<resources
+    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Array containing custom messages shown during fingerprint acquisision from vendor. -->
     <string-array name="fingerprint_acquired_vendor">
         <item>Try again</item>
